# cortex-command

./: .gitignore  .mcp.json  Agents.md  CHANGELOG.md  CLAUDE.md  README.md  install.sh  justfile  lifecycle.config.md  pyproject.toml  pytest.ini
.claude/: settings.json
.claude-plugin/: marketplace.json
.cursor/: hooks.json
.githooks/: pre-commit
backlog/: 001-fix-overnight-watchdog-to-kill-entire-process-group-on-stall.md  002-morning-report-surface-failure-root-cause-inline.md  003-shareable-install-epic.md  004-prep-hooks-and-apikey-for-sharing.md  005-non-destructive-claude-md-strategy.md  006-make-just-setup-additive.md  007-build-setup-merge-skill.md  008-auto-rename-claude-session-to-lifecycle-feature.md  009-requirements-management-overhaul.md  010-fix-skill-subfile-path-bug.md  011-redesign-requirements-skill-and-rewrite-project-md.md  012-gather-area-requirements-docs.md  013-wire-requirements-drift-check-into-lifecycle-review.md  014-overnight-conflict-visibility-epic.md  015-surface-conflict-details-in-morning-report.md  016-add-recovery-guidance-to-morning-report.md  017-areas-field-conflict-aware-scheduling.md  018-harness-quality-improvements-epic.md  019-tighten-spec-template-and-plan-verification-requirements.md  020-add-harness-component-pruning-checklist.md  021-define-evaluator-rubric-for-software-features.md  022-fix-non-atomic-state-writes-in-overnight-runner.md  023-replace-spec-dump-with-jit-loading-in-implement-prompt.md  024-reconcile-judgment-md-with-batch-brain-md.md  025-prevent-agents-from-writing-their-own-completion-evidence.md  026-create-remote-setup-md-for-remote-access-setup.md  027-fix-next-question-id-race-condition-in-deferral-py.md  028-fix-test-plan-py-failures-from-worktree-bootstrap-changes.md  029-add-playwright-htmx-test-patterns-dev-toolchain.md  030-investigate-fix-swim-lane-inline-styles-layout.md  031-add-hover-states-loading-feedback-badge-micro-interactions.md  032-add-accessibility-foundations-aria-live-severity.md  033-dashboard-ui-quality-baseline-epic.md  034-fix-inline-style-violations-session-panel-feature-cards.md  035-define-evaluation-rubric-spec-template-context-md.md  036-address-verification-passed-dead-code-in-exit-reports.md  037-replace-concurrency-cap-with-conflict-aware-round-scheduling.md  038-add-index-regeneration-to-overnight-pre-flight-and-investigate-staleness-gaps.md  039-fix-overnight-runner-silent-crash-signal-handling-unregistered-events-and-batch-plan-path-mismatch.md  040-fix-overnight-runner-resume-round-restart-status-overwrite-and-missing-round-filter.md  (+178 more)
claude/: Agents.md  common.py  get-api-key.sh  settings.json  statusline.ps1  statusline.sh
cortex/: .gitignore  README.md  lifecycle.config.md
cortex_command/: __init__.py  _brief_scoring.py  adr_citation_audit.py  auto_bump_version.py  clean.py  cli.py  cli_resolver.py  common.py  critical_review.py  diagnose_session_path.py  discovery.py  install_guard.py  interactive_lock.py  lifecycle_config.py  lifecycle_event.py  lifecycle_implement.py  log_invocation.py  parity_check.py  phase_labels.py  refine.py  session_tokens.py  worktree_precondition.py
cursor/: hooks.json
debug/: 2026-04-02-refine-spec-without-research.md  2026-04-07-overnight-round2-crash.md  2026-04-08-setup-merge-directory-targets.md
docs/: agentic-layer.md  backlog.md  dashboard.md  index.html  install.md  interactive-phases.md  lifecycle-transition-table.md  mcp-contract.md  mcp-server.md  migration-no-clone-install.md  overnight-operations.md  overnight.md  pipeline.md  plugin-development.md  policies.md  release-process.md  robots.txt  rollforward-exit.md  sdk.md  setup.md  sitemap.xml  skills-reference.md  ui-tooling.md
hooks/: cortex-cleanup-session.sh  cortex-cli-version-sync.sh  cortex-notify-remote.sh  cortex-scan-lifecycle.sh  notify.sh  scan-lifecycle.sh  validate-commit.sh
landing-page/: README.md  prompt-1-foundation.md  prompt-2-pipeline.md
lifecycle/: escalations.jsonl  morning-report.md
requirements/: multi-agent.md  observability.md  pipeline.md  project.md  remote-access.md
retros/: 2026-04-02-1826-lifecycle-006.md  2026-04-07-2131-lifecycle-040.md  2026-04-10-1007-lifecycle-053.md  2026-04-10-1036-lifecycle-053.md  2026-04-10-2304-refine-065-scope-expansion.md  2026-04-11-1512-lifecycle-070.md  2026-04-12-2038-lifecycle-implement-worktree-dispatch.md  2026-04-13-0904-lifecycle-072.md  2026-04-13-1904-lifecycle-080.md  2026-04-14-1146-lifecycle-077.md  2026-04-15-1121-extract-optional-skills-to-plugin.md  2026-04-17-1737-lifecycle-67.md  2026-04-18-2013-lifecycle-083.md  2026-04-18-2014-lifecycle-084-plan.md  2026-04-20-0731-lifecycle-087.md  2026-04-20-2135-lifecycle-088.md  2026-04-20-2156-lifecycle-work.md  2026-04-21-0853-lifecycle-085-plan-phase.md  2026-04-21-0853-lifecycle-088-plan.md  2026-04-21-2121.md  2026-04-21-2147-lifecycle-130.md  2026-04-22-0847-lifecycle-129-plan.md  2026-04-22-0847-lifecycle-131-spec-phase.md  2026-04-22-1204-lifecycle-127-plan.md  2026-04-22-1204-lifecycle-130-plan.md  2026-04-22-1704-lifecycle-132-plan.md
scripts/: benchmark_scan_lifecycle.py  generate-registry.py  migrate-namespace.py  sweep-skill-namespace.py  validate-callgraph.py  validate-preconditions.py  validate-skill.py  verify-skill-namespace.carve-outs.txt  verify-skill-namespace.py
tests/: README.md  _hook_fixture_helpers.py  baseline_critical_review.py  conftest.py  failure_matrix.py  lifecycle_phase.py  perf_mcp_subprocess.py  pressure_runner.py  smoke_uv_tool_hook.sh  test_adr_citation_audit.py  test_advance_gate_mismatch_remedy.py  test_advance_spec_approve_writeback.py  test_advance_status_projection_sweep.py  test_archive_rewrite_paths.py  test_audit_tier_divergence.py  test_auth_bootstrap.py  test_auth_bootstrap_integration.py  test_auth_precedence.py  test_auth_status.py  test_backlog_author.py  test_backlog_backend_cli.py  test_backlog_grep_targets_resolve.py  test_backlog_readiness.py  test_backlog_ready_missing_index.py  test_backlog_ready_render.py  test_backlog_ready_tag_filter.py  test_backlog_worktree_routing.py  (+279 more)
(+3763 files in other folders)
