[build-system]
requires = ["hatchling>=1.27", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "cortex-command"
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.46,<0.1.47",
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "markdown",
    "psutil>=5.9",
    "mcp>=1.27.0",
    "tiktoken>=0.7.0,<1.0",
]

[project.scripts]
cortex = "cortex_command.cli:main"
cortex-batch-runner = "cortex_command.overnight.batch_runner:main"
cortex-update-item = "cortex_command.backlog.update_item:main"
cortex-create-backlog-item = "cortex_command.backlog.create_item:main"
cortex-generate-backlog-index = "cortex_command.backlog.generate_index:main"
cortex-build-epic-map = "cortex_command.backlog.build_epic_map:main"
# Phase 3 console-script sweep (R13): promoted from python3 -m callsites
cortex-auth = "cortex_command.overnight.auth:_main"
cortex-common = "cortex_command.common:main"
cortex-critical-review = "cortex_command.critical_review:main"
cortex-dashboard-seed = "cortex_command.dashboard.seed:main"
cortex-daytime-dispatch-writer = "cortex_command.overnight.daytime_dispatch_writer:main"
cortex-daytime-pipeline = "cortex_command.overnight.daytime_pipeline:_run"
cortex-daytime-result-reader = "cortex_command.overnight.daytime_result_reader:main"
cortex-discovery = "cortex_command.discovery:main"
cortex-integration-recovery = "cortex_command.overnight.integration_recovery:main"
cortex-interrupt = "cortex_command.overnight.interrupt:main"
cortex-morning-review-complete-session = "cortex_command.overnight.complete_morning_review_session:main"
cortex-pipeline-metrics = "cortex_command.pipeline.metrics:main"
cortex-report = "cortex_command.overnight.report:main"
cortex-smoke-test = "cortex_command.overnight.smoke_test:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "cortex_command/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["cortex_command"]

# Ensure the bash launcher template (rendered by
# MacOSLaunchAgentBackend._install_launcher_script at schedule time) is
# shipped inside the wheel as package data. Hatchling already includes
# everything under the package tree by default; the explicit entry here
# documents the dependency and guards against future build-config
# pruning.
[tool.hatch.build.targets.wheel.force-include]
"cortex_command/overnight/scheduler/launcher.sh" = "cortex_command/overnight/scheduler/launcher.sh"

[tool.pytest.ini_options]
testpaths = ["tests", "cortex_command/dashboard/tests", "cortex_command/pipeline/tests", "cortex_command/overnight/tests", "cortex_command/init/tests", "cortex_command/backlog/tests", "cortex_command/tests"]
pythonpath = ["."]
markers = [
    "slow: opt-in tests that invoke live models (use --run-slow to enable)",
    "serial: tests that spawn real subprocesses and must not run in parallel against each other (R26 / Task 20)",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-repeat>=0.9.3",
]
