[build-system]
requires = ["hatchling>=1.27", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "cortex-command"
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.46,<0.1.47",
    "fastapi<1.0",
    "uvicorn[standard]<1.0",
    "jinja2",
    "markdown<4",
    "psutil>=5.9,<8",
    "mcp>=1.27.0",
    "pyyaml>=6.0",
    # Direct because FastAPI depends on starlette with no upper bound and its maintainers refuse to add one (discussions #6211/#15193), so the app must own this cap; it also governs the mcp/sse-starlette starlette paths.
    "starlette>=0.49.1,<2.0",
    "tiktoken>=0.7.0,<1.0",
]

[project.scripts]
cortex = "cortex_command.cli:main"
cortex-batch-runner = "cortex_command.overnight.batch_runner:main"
cortex-update-item = "cortex_command.backlog.update_item:main"
cortex-create-backlog-item = "cortex_command.backlog.create_item:main"
cortex-generate-backlog-index = "cortex_command.backlog.generate_index:main"
cortex-build-epic-map = "cortex_command.backlog.build_epic_map:main"
# Phase 3 console-script sweep (R13): promoted from python3 -m callsites
cortex-auth = "cortex_command.overnight.auth:_main"
cortex-auto-bump-version = "cortex_command.auto_bump_version:main"
cortex-backlog-ready = "cortex_command.backlog.ready:main"
cortex-common = "cortex_command.common:main"
cortex-clean = "cortex_command.clean:main"
cortex-check-bare-python-import = "cortex_command.lint.bare_python_import:main"
cortex-check-contract = "cortex_command.lint.contract:main"
cortex-adr-citation-audit = "cortex_command.adr_citation_audit:main"
cortex-check-parity = "cortex_command.parity_check:main"
cortex-check-prescriptive-prose = "cortex_command.lint.prescriptive_prose:main"
cortex-check-skill-path = "cortex_command.lint.skill_path:main"
cortex-commit-preflight = "cortex_command.commit.preflight:main"
cortex-complexity-escalator = "cortex_command.lifecycle.complexity_escalator:main"
cortex-critical-review = "cortex_command.critical_review:main"
cortex-critical-review-resolve-feature = "cortex_command.critical_review.resolve_feature_cli:main"
cortex-critical-review-write-residue = "cortex_command.critical_review.write_residue_cli:main"
cortex-dashboard-seed = "cortex_command.dashboard.seed:main"
cortex-discovery = "cortex_command.discovery:main"
cortex-git-sync-rebase = "cortex_command.git.sync_rebase:main"
cortex-integration-recovery = "cortex_command.overnight.integration_recovery:main"
cortex-interrupt = "cortex_command.overnight.interrupt:main"
cortex-lifecycle-branch-mode = "cortex_command.lifecycle.branch_mode_cli:main"
cortex-lifecycle-counters = "cortex_command.lifecycle.counters:main"
cortex-lifecycle-init-ensure = "cortex_command.lifecycle.init_ensure:main"
cortex-lifecycle-picker-decision = "cortex_command.lifecycle.picker_decision_cli:main"
cortex-lifecycle-state = "cortex_command.lifecycle.state_cli:main"
cortex-load-parent-epic = "cortex_command.backlog.load_parent_epic:main"
cortex-read-commit-artifacts = "cortex_command.lifecycle_config:_main"
cortex-log-invocation = "cortex_command.log_invocation:main"
cortex-morning-review-complete-session = "cortex_command.overnight.complete_morning_review_session:main"
cortex-morning-review-gc-demo-worktrees = "cortex_command.overnight.gc_demo_worktrees:main"
cortex-pipeline-metrics = "cortex_command.pipeline.metrics:main"
cortex-refine = "cortex_command.refine:main"
cortex-report = "cortex_command.overnight.report:main"
cortex-resolve-backlog-item = "cortex_command.backlog.resolve_item:main"
cortex-smoke-test = "cortex_command.overnight.smoke_test:main"
cortex-worktree-create = "cortex_command.pipeline.worktree_create_cli:main"
cortex-worktree-resolve = "cortex_command.pipeline.worktree_resolve_cli:main"
cortex-worktree-precondition = "cortex_command.worktree_precondition:main"
cortex-interactive-lock = "cortex_command.interactive_lock:main"
cortex-lifecycle-event = "cortex_command.lifecycle_event:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "cortex_command/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["cortex_command"]

# Ensure the bash launcher template (rendered by
# MacOSLaunchAgentBackend._install_launcher_script at schedule time) is
# shipped inside the wheel as package data. Hatchling already includes
# everything under the package tree by default; the explicit entry here
# documents the dependency and guards against future build-config
# pruning.
[tool.hatch.build.targets.wheel.force-include]
"cortex_command/overnight/scheduler/launcher.sh" = "cortex_command/overnight/scheduler/launcher.sh"

[tool.pytest.ini_options]
testpaths = ["tests", "cortex_command/dashboard/tests", "cortex_command/pipeline/tests", "cortex_command/overnight/tests", "cortex_command/init/tests", "cortex_command/backlog/tests", "cortex_command/tests", "cortex_command/lifecycle/tests"]
pythonpath = ["."]
xfail_strict = true
markers = [
    "slow: opt-in tests that invoke live models (use --run-slow to enable)",
    "serial: tests that spawn real subprocesses and must not run in parallel against each other (R26 / Task 20)",
    "structural_equivalence: declares the named-tolerance set a parity test opts into for a given stream (see tests/test_parity_contract.py)",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-repeat>=0.9.3",
    # httpx backs starlette.testclient.TestClient (dashboard route smoke test);
    # declared direct so it is not an incidental transitive of mcp.
    "httpx",
]
