[build-system]
requires = ["hatchling>=1.27", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "cortex-command"
dynamic = ["version"]
requires-python = ">=3.12"
# Base install = the lifecycle/backlog/commit/refine CLI. Lean by design
# (pyyaml + psutil only) so a bare `uv tool install` pulls no web/agent stack.
# The dashboard and overnight runner are opt-in extras below.
#
# IMPORTANT: the auto-installer (cortex-overnight MCP server + SessionStart
# hooks, via install_core.py) installs `cortex-command[all]`, so overnight and
# dashboard users get the full stack automatically — a no-extra reinstall would
# silently strip the Claude Agent SDK the runner needs. Only a *manual* bare
# `uv tool install` (no extras) is lean.
dependencies = [
    "psutil>=5.9,<8",
    "pyyaml>=6.0",
]

# Opt-in feature groups. Full install (what the auto-installer uses):
#   uv tool install "cortex-command[all] @ git+https://github.com/charleshall888/cortex-command.git@<tag>"
[project.optional-dependencies]
# `cortex dashboard` — the agent monitoring web app.
dashboard = [
    "fastapi<1.0",
    # Plain uvicorn (not [standard]): the dashboard uses no websockets/reload,
    # so uvloop/httptools/watchfiles/websockets would be pure install baggage.
    "uvicorn<1.0",
    "jinja2",
    "markdown<4",
    # Constraint pin (not imported directly): FastAPI depends on starlette with
    # no upper bound and its maintainers refuse to add one (discussions
    # #6211/#15193), so the app owns this cap wherever starlette is pulled in.
    "starlette>=0.49.1,<2.0",
]
# `cortex overnight` / pipeline dispatch — pulls the Claude Agent SDK (which
# bundles a ~197 MB `claude` CLI plus the mcp subtree). Kept out of the base so
# a bare install is not dominated by a binary the runner routes around
# (cli_resolver prefers the system `claude`).
overnight = [
    "claude-agent-sdk>=0.1.46,<0.1.47",
    # Same starlette cap governs the mcp/sse-starlette paths the SDK pulls in.
    "starlette>=0.49.1,<2.0",
]
all = [
    "cortex-command[dashboard,overnight]",
]

[project.scripts]
cortex = "cortex_command.cli:main"
cortex-batch-runner = "cortex_command.overnight.batch_runner:main"
cortex-update-item = "cortex_command.backlog.update_item:main"
cortex-create-backlog-item = "cortex_command.backlog.create_item:main"
cortex-generate-backlog-index = "cortex_command.backlog.generate_index:main"
cortex-generate-kept-pauses = "cortex_command.lifecycle.generate_kept_pauses:main"
cortex-build-epic-map = "cortex_command.backlog.build_epic_map:main"
# Phase 3 console-script sweep (R13): promoted from python3 -m callsites
cortex-auth = "cortex_command.overnight.auth:_main"
cortex-auto-bump-version = "cortex_command.auto_bump_version:main"
cortex-backlog-ready = "cortex_command.backlog.ready:main"
cortex-common = "cortex_command.common:main"
cortex-clean = "cortex_command.clean:main"
cortex-check-bare-python-import = "cortex_command.lint.bare_python_import:main"
cortex-check-clarify-critic-events = "cortex_command.lint.clarify_critic_events:main"
cortex-check-contract = "cortex_command.lint.contract:main"
cortex-adr-citation-audit = "cortex_command.adr_citation_audit:main"
cortex-check-parity = "cortex_command.parity_check:main"
cortex-check-prescriptive-prose = "cortex_command.lint.prescriptive_prose:main"
cortex-check-skill-path = "cortex_command.lint.skill_path:main"
cortex-commit-preflight = "cortex_command.commit.preflight:main"
cortex-complexity-escalator = "cortex_command.lifecycle.complexity_escalator:main"
cortex-critical-review = "cortex_command.critical_review:main"
cortex-critical-review-resolve-feature = "cortex_command.critical_review.resolve_feature_cli:main"
cortex-critical-review-write-residue = "cortex_command.critical_review.write_residue_cli:main"
cortex-dashboard-seed = "cortex_command.dashboard.seed:main"
cortex-debug-session-path = "cortex_command.diagnose_session_path:main"
cortex-discovery = "cortex_command.discovery:main"
cortex-git-sync-rebase = "cortex_command.git.sync_rebase:main"
cortex-integration-recovery = "cortex_command.overnight.integration_recovery:main"
cortex-interrupt = "cortex_command.overnight.interrupt:main"
cortex-lifecycle-branch-mode = "cortex_command.lifecycle.branch_mode_cli:main"
cortex-lifecycle-complete-route = "cortex_command.lifecycle.complete_route:main"
cortex-lifecycle-counters = "cortex_command.lifecycle.counters:main"
cortex-lifecycle-create-index = "cortex_command.lifecycle.create_index:main"
cortex-lifecycle-enter = "cortex_command.lifecycle.enter:main"
cortex-lifecycle-finalize = "cortex_command.lifecycle.finalize:main"
cortex-lifecycle-plan-decision = "cortex_command.lifecycle.plan_decision:main"
cortex-lifecycle-review-verdict = "cortex_command.lifecycle.review_verdict:main"
cortex-lifecycle-spec-approve = "cortex_command.lifecycle.spec_approve:main"
cortex-lifecycle-implement-transition = "cortex_command.lifecycle.implement_transition:main"
cortex-lifecycle-describe = "cortex_command.lifecycle.describe:main"
cortex-lifecycle-next = "cortex_command.lifecycle.next_verb:main"
cortex-lifecycle-advance = "cortex_command.lifecycle.advance:main"
cortex-lifecycle-dispatch-choice = "cortex_command.lifecycle.dispatch_choice_cli:main"
cortex-lifecycle-register-artifact = "cortex_command.lifecycle.register_artifact:main"
cortex-lifecycle-init-ensure = "cortex_command.lifecycle.init_ensure:main"
cortex-lifecycle-parse-args = "cortex_command.lifecycle.parse_args:main"
cortex-lifecycle-branch-decision = "cortex_command.lifecycle.branch_decision:main"
cortex-lifecycle-picker-decision = "cortex_command.lifecycle.picker_decision_cli:main"
cortex-lifecycle-prepare-worktree = "cortex_command.lifecycle.prepare_worktree:main"
cortex-lifecycle-record-pr-opened = "cortex_command.lifecycle.record_pr_opened:main"
cortex-lifecycle-resolve = "cortex_command.lifecycle.resolve:main"
cortex-lifecycle-stage-artifacts = "cortex_command.lifecycle.stage_artifacts:main"
cortex-lifecycle-start-sync = "cortex_command.lifecycle.start_sync:main"
cortex-lifecycle-state = "cortex_command.lifecycle.state_cli:main"
cortex-lifecycle-wontfix = "cortex_command.lifecycle.wontfix_cli:main"
cortex-append-glossary-term = "cortex_command.lifecycle.append_glossary_term_cli:main"
cortex-list-requirements = "cortex_command.lifecycle.list_requirements_cli:main"
cortex-load-parent-epic = "cortex_command.backlog.load_parent_epic:main"
cortex-load-requirements = "cortex_command.lifecycle.load_requirements_cli:main"
cortex-validate-requirements-doc = "cortex_command.lifecycle.validate_requirements_doc_cli:main"
cortex-read-backlog-backend = "cortex_command.lifecycle.backlog_backend_cli:main"
cortex-read-commit-artifacts = "cortex_command.lifecycle_config:_main"
cortex-log-invocation = "cortex_command.log_invocation:main"
cortex-morning-review-advance-lifecycle = "cortex_command.overnight.advance_lifecycle:main"
cortex-morning-review-close-tickets = "cortex_command.overnight.close_tickets:main"
cortex-morning-review-complete-session = "cortex_command.overnight.complete_morning_review_session:main"
cortex-morning-review-gc-demo-worktrees = "cortex_command.overnight.gc_demo_worktrees:main"
cortex-morning-review-push-closures = "cortex_command.overnight.push_closures:main"
cortex-morning-review-resolve-demo-config = "cortex_command.overnight.resolve_demo_config:main"
cortex-pipeline-metrics = "cortex_command.pipeline.metrics:main"
cortex-refine = "cortex_command.refine:main"
cortex-report = "cortex_command.overnight.report:main"
cortex-resolve-backlog-item = "cortex_command.backlog.resolve_item:main"
cortex-resolve-model = "cortex_command.lifecycle.resolve_model_cli:main"
cortex-session-tokens = "cortex_command.session_tokens:main"
cortex-smoke-test = "cortex_command.overnight.smoke_test:main"
cortex-worktree-resolve = "cortex_command.pipeline.worktree_resolve_cli:main"
cortex-worktree-precondition = "cortex_command.worktree_precondition:main"
cortex-interactive-lock = "cortex_command.interactive_lock:main"
cortex-lifecycle-event = "cortex_command.lifecycle_event:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "cortex_command/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["cortex_command"]

# Ensure the bash launcher template (rendered by
# MacOSLaunchAgentBackend._install_launcher_script at schedule time) is
# shipped inside the wheel as package data. Hatchling already includes
# everything under the package tree by default; the explicit entry here
# documents the dependency and guards against future build-config
# pruning.
[tool.hatch.build.targets.wheel.force-include]
"cortex_command/overnight/scheduler/launcher.sh" = "cortex_command/overnight/scheduler/launcher.sh"

[tool.pytest.ini_options]
testpaths = ["tests", "cortex_command/dashboard/tests", "cortex_command/pipeline/tests", "cortex_command/overnight/tests", "cortex_command/init/tests", "cortex_command/backlog/tests", "cortex_command/tests", "cortex_command/lifecycle/tests"]
pythonpath = ["."]
xfail_strict = true
markers = [
    "slow: opt-in tests that invoke live models (use --run-slow to enable)",
    "serial: tests that spawn real subprocesses and must not run in parallel against each other (R26 / Task 20)",
    "structural_equivalence: declares the named-tolerance set a parity test opts into for a given stream (see tests/test_parity_contract.py)",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-repeat>=0.9.3",
    # httpx backs starlette.testclient.TestClient (dashboard route smoke test);
    # declared direct so it is not an incidental transitive of mcp.
    "httpx",
]
